# rwkv-anki-autoresearch

./: .gitignore  CLAUDE.md  INPUT_FEATURES.md  README.md  build_dataset.py  config.py  debug_review0.py  diag_parity.py  export_rnn_trace.py  make_reference.py  requirements.txt  setup.py  test_users.json  verify_rust.py
optimization/: FUTURE_FEATURES.md  HISTORY.md  LIT_REVIEW.md  MONOTONICITY_PLAN.md  PROTOCOL.md  STATEFUL_BPTT_PLAN.md  baseline_log.jsonl  champion_5k.json  champion_5k_history.jsonl  champion_5k_plain.json  champion_5k_track2.json  count_groups_5k.py  cpu_speed_log.md  entropy_floor.py  eval_sharded.py  gate.py  grad_stats_report.py  groups_5k.json  hp_tuner.py  hp_tuner_5k.py  log.jsonl  log.md  logbook.py  measure_throughput.py  model_stats.py  paired_pvalue.py  promote_champion_5k.py  qat_log.jsonl  qat_pq_ep150_recipe.toml  quant_log.jsonl  quant_ptq.py  research_5k.md  research_5k_notes.md  research_5k_verbose.md  research_log.jsonl  research_log.md  side_experiments.md  soup.py  tuner_5k_log.jsonl  tuner_5k_log_2ep_era.jsonl  (+3 more)
reference/: ref_metrics.json  rpv_allint2_107.json  rpv_allint2_136.json  rpv_allint2_156.json  rpv_deploy_107.json  rpv_deploy_136.json  rpv_deploy_156.json  rpv_fp32_107.json  rpv_fp32_136.json  rpv_fp32_156.json  weight_names.json
rust/rwkv-infer/: BATCHING_PLAN.md  Cargo.toml
rust/rwkv-infer/src/: fast.rs  main.rs  model.rs
rwkv/: architecture.py  data_processing.py  data_processing_test_5k_h1.toml  data_processing_test_5k_h2.toml  data_processing_train_5k_h1.toml  data_processing_train_5k_h2.toml  get_result.py  (+16 more)
(+1082 files in other folders)
