[package]
name = "rwkv-infer"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.11"
candle-nn = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
nalgebra = "0.33"   # pure-Rust SVD (no LAPACK) for low-rank card-state truncation (step 4)

[profile.release]
opt-level = 3
# (iter 1 tried lto=true + codegen-units=1 + target-cpu=native -> only 1.015x at B=128, p=0.012
#  REJECTED: gemm already runtime-dispatches AVX2/FMA, so build flags barely move the deployment B.)
